@@ -735,10 +735,26 @@ examples/tiff
 
   This is a simple unit test for the TIFF creation library at apps/graphic/tiff.
   It is configured to work in the Linux user-mode simulation and has not been
-  tested in any other environment.
+  tested in any other environment.  Since the example also depends on some
+  other logic to mount a file system, currently it will only work as an NSH
+  built-on, i.e., if the following is defined:
 
-  At a miniumum, you would probably have to change the hard-coded pathes to
-  the TIFF files defined in the example to run in an embedded platform.
+    CONFIG_NSH_BUILTIN_APPS=y
+    CONFIG_EXAMPLES_TIFF_BUILTIN=y
+
+  At a miniumum, to run in an embedded environment, you will probably have to
+  change the configured paths to the TIFF files defined in the example.
+
+    CONFIG_EXAMPLES_TIFF_OUTFILE - Name of the resulting TIFF file.  Default is
+       "/tmp/result.tif"
+    CONFIG_EXAMPLES_TIFF_TMPFILE1/2 - Names of two temporaries files that
+      will be used in the file creation.  Defaults are "/tmp/tmpfile1.dat" and
+      "/tmp/tmpfile2.dat"
+
+  The following must also be defined in your appconfig file:
+
+    CONFIGURED_APPS += examples/tiff
+    CONFIGURED_APPS += graphics/tiff
 
 examples/udp
 ^^^^^^^^^^^^
